[package]
name = "csv_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
# async
async-executor = { git = "https://github.com/brandonros/async-executor.git", rev = "144d6c6bcd92ecba5ae1214df25f420d192d5248", features = ["main_executor"] }
async-io = "2.3.4"
async-fs = "2.1.2"
async-lock = "3.4.0"
futures-lite = "2.3.0"
# errors
simple_error = { git = "https://github.com/brandonros/simple_error.git" }
# logging
log = "0.4.22"
